# ccx

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  PRD.md  README.md
.claude/agents/: launcher-experience.md  search-ranking.md  session-discovery.md
.claude/skills/acp-constraint/: skill.md
.claude/skills/acp-decision/: skill.md
.claude/skills/ccx-debug/: skill.md
.claude/skills/launcher-flow/: skill.md
.claude/skills/mvp-orchestrator/: skill.md
.claude/skills/query-ranking/: skill.md
.claude/skills/session-inventory/: skill.md
.github/workflows/: release.yml
agent-context/constraints/: INDEX.md  README.md
agent-context/decisions/: 2026-03-18-adopt-cache-first-cli-defaults.md  2026-03-18-adopt-ratatui-for-isolate-tui.md  2026-03-18-cli-naming-evaluation.md  2026-03-18-keep-cutoff-ties-in-isolate-window-selection.md  2026-03-18-keep-shared-ranking-and-make-isolate-workset-aware.md  2026-03-18-rank-isolate-targets-at-window-level.md  2026-03-18-repo-local-harness-and-python-mvp-scaffold.md  2026-03-18-retire-python-reference-and-standardize-rust-src-layout.md  2026-03-18-session-collection-caching-strategy.md  2026-03-18-support-workset-isolation-via-window-minimization.md  2026-03-18-terminal-native-tui-primary-surface.md  2026-03-18-use-rust-for-primary-implementation.md  INDEX.md  README.md
examples/: sessions.sample.json
scripts/: isolate-cycle.sh  render-homebrew-formula.sh
src/: cache.rs  classifier.rs  debug.rs  isolate.rs  isolate_tui.rs  iterm.rs  main.rs  models.rs  search.rs  terminal_ui.rs  tui.rs
