[package]
name = "ccx"
version = "0.1.0"
edition = "2021"
description = "iTerm2 session launcher focused on Claude Code and Codex workflows"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
repository = "https://github.com/myeongjjun/ccx"
homepage = "https://github.com/myeongjjun/ccx"

[[bin]]
name = "ccx"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
# `clap` keeps the Rust CLI declarative and close to the current Python command surface.
clap = { version = "4.5", features = ["derive"] }
# Session snapshots and iTerm2 bridge payloads are JSON, so serde is the core dependency.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# `crossterm` is enough for a lightweight in-terminal launcher without introducing a larger UI stack yet.
crossterm = "0.28"
# `ratatui` adds layout/widgets for the isolate preview UI without replacing the current launcher.
ratatui = "0.29"
unicode-width = "0.2"
